--- a/SpecflowBlazorTest/Pages/Counter.razor
+++ b/SpecflowBlazorTest/Pages/Counter.razor
@@ -9,7 +9,7 @@
     <span id="counter-value">@currentCount</span>
 </p>
 
-<button class="btn btn-primary" id="increment-count-button" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" id="increment-count-button" data-test-id="increment-count-button" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
